@@ -36,4 +36,5 @@ Bugfixes:
 * build: rpm packages get installed again without fsync which speeds up the installation
 * backend: fixed binary rpm cache handling for image building via interconnect
 * webui: fixed change password dialog
+* webui: fixed display of groups and globalrole
 
